--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,11 +28,12 @@ jobs:
       - run:
           name: Deploy to Github Pages.
           command: sh ./deploy.sh
-    branches:
-      only:
-        - master
 workflows:
   version: 2
   main:
     jobs:
-      - deploy
+      deploy
+        filter:
+          branches:
+            only: master
+ 
