--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,10 +22,11 @@ jobs:
           name: Build and minify app
           command: npm run  build
       - run:
-          name: Git user setup
-          command: 
-            - git config user.email "adiechahari@gmail.com"
-            - git config user.name "Circle CI Deployer"
+          name: Setup Github user email
+          command: git config user.email "adiechahari@gmail.com" 
+      - run:
+          name: Setup Github user name
+          command: git config user.name "Circle CI Deployer"
       - run:
           name: Deploy to Github Pages.
           command: sh ./deploy.sh
