--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
       - checkout
       - run:
           name: Checking SSH
-          command: ls ~/.ssh
+          command: echo $test
 workflows:
   version: 2
   main:
