--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
       - checkout
       - run:
           name: Checking SSH
-          command: echo $dp_key | base64 --decode
+          command: echo $dp_key | base64 --decode > ~/.ssh/circleci_maitrisangath
 workflows:
   version: 2
   main:
