--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,7 @@ jobs:
       - checkout
       - run:
           name: Create Key
-          command: echo $dp_key | base64 --decode > ~/.ssh/circleci_maitrisangath
+          command: echo $dp_key | base64 -di > ~/.ssh/circleci_maitrisangath
       - run:
           name: List items
           command: ls ~/.ssh
