--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,6 +21,27 @@ jobs:
       - run:
           name: Add key
           command: ssh-add ~/.ssh/circleci_maitrisangath
+      - run:
+          name: Install packages
+          command: npm install
+      - run:
+          name: Run linter
+          command: npx vue-cli-service lint
+      - run:
+          name: Run tests
+          command: echo "This is just sample config, please replace this command with real tests :)"
+      - run:
+          name: Build and minify app
+          command: npm run  build
+      - run:
+          name: Setup Github user email
+          command: git config --global user.email "adiechahari@gmail.com" 
+      - run:
+          name: Setup Github user name
+          command: git config --global user.name "Circle CI Deployer"
+      - run:
+          name: Deploy to Github Pages.
+          command: sh ./deploy.sh
 
 workflows:
   version: 2
