--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,6 +10,12 @@ jobs:
             - "3d:bd:06:12:d3:c3:d7:ca:47:8c:54:de:52:56:3d:2c"
       - checkout
       - run:
+          name: Check
+          command: ls
+      - run:
+          name: Check Git reppo
+          command: git status
+      - run:
           name: Check Git SSH
           command: ssh -vvv git@github.com
 
