--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
           command: npm run build
       - run:
           name: Move to dist
-          command: cd dist
+          command: mv dist/ .
       - run:
           name: Check after moved
           command: ls -la
