--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,9 +16,6 @@ jobs:
           name: Check git remote
           command: git remote -v
       - run:
-          name: Remove Git Dir
-          command: rm -rf .git
-      - run:
           name: Check after
           command: ls -la
       - run:
@@ -32,7 +29,7 @@ jobs:
           command: cp -r dist ../dist
       - run:
           name: Remove all filesfolders except dist
-          command: rm -rf ./
+          command: rm -rf .*
       - run:
           name: Move back files
           command: cp -r ../dist/ ./
