--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,7 +29,7 @@ jobs:
           command: cp -r dist ../dist
       - run:
           name: Remove all filesfolders except dist
-          command: rm -rf .*
+          command: rm -rf ./*
       - run:
           name: Move back files
           command: cp -r ../dist/ ./
