--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,10 +32,22 @@ jobs:
           command: rm -rf ./*
       - run:
           name: Move back files
-          command: cp -r ../dist/ ./
+          command: cp -r ../dist/* ./
+      - run:
+          name: Remove few more hidden folder
+          command: rm -rf ./.git ./.circleci ./.gitignore
       - run:
           name: Check after moved
           command: ls -la
+      - run:
+          name: Initialize and commit git
+          command: git init && git add --all && git commit -m "deploy at $(date)"
+      - run:
+          name: Initialize git remote
+          command: git remote add origin $CIRCLE_REPOSITORY_URL 
+      - run:
+          name: Push to github page
+          command: git remote -v
 
 workflows:
   version: 2
