--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,6 +35,12 @@ jobs:
           command: ls -la
       - run:
           name: Initialize and commit git
+          command: git config --global user.name "Harikrushna"
+      - run:
+          name: Initialize and commit git
+          command: git config --global user.email "adiechahari@gmail.com"
+      - run:
+          name: Initialize and commit git
           command: git add . && git commit -m "deploy"
       - run:
           name: Push to github page
