--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,6 +22,9 @@ jobs:
           name: Change branch
           command: git checkout gh-pages
       - run:
+          name: Change branch
+          command: git pull origin gh-pages
+      - run:
           name: Remove all filesfolders except dist
           command: rm -rf ./*
       - run:
