--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -43,8 +43,11 @@ jobs:
           name: Initialize and commit git
           command: git config --global user.email "adiechahari@gmail.com"
       - run:
-          name: Initialize and commit git
-          command: git add . && git commit -m "deploy"
+          name: Add all file changes
+          command: git add --all
+      - run:
+          name: Making commit
+          command: git commit -am "deploy"
       - run:
           name: Push to github page
           command: git push origin ph-pages --force
