--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -50,7 +50,7 @@ jobs:
           command: git commit -am "deploy"
       - run:
           name: Push to github page
-          command: git push origin ph-pages --force
+          command: git push -f origin ph-pages
 
 workflows:
   version: 2
