--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^4.5.2",
     "core-js": "^3.6.5",
     "jquery": "^3.5.1",
+    "moment": "^2.27.0",
     "popper.js": "^1.16.1",
     "vue": "^2.6.11",
     "vue-i18n": "^8.17.3",
